# playdate-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  link.cpp  main.cpp  pdnewlib.c  readme.md
Source/: main.lua  pdxinfo
buildsupport/: common.mk  link_map.ld  setup.c
cmake/: AddPlaydateApplication.cmake  CompileTargetForPlaydate.cmake
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp
examples/particles/: CMakeLists.txt  main.cpp
examples/particles/Source/: main.lua  pdxinfo
examples/particles/Source/font/: namco-1x.fnt
inc/pdcpp/: pdnewlib.h
src/: pdnewdelete.cpp  pdnewlib.c  setup.c
